# parallel-in-time-ode-filters

./: .gitattributes  .gitignore  README.md  precompilation_benchmark.py  pyproject.toml  requirements.txt  results.org  setup.py  sync_slurm.sh  sync_wsi.sh  test.py  test2.py  test_likelihoods.py  tox.ini
.github/workflows/: ci.yaml
experiments/: common_plot_stuff.py
experiments/1_simple_runtime_benchmark/: collect_data.py  logistic.csv  (+2 more)
notebooks/: 2022-04-20-odesolve-helloworld.ipynb  2022-04-25-visualizing_the_ieks.ipynb  2022-04-28-robustness_investigation_original.ipynb  2022-04-28-robustness_investigation_sqrt.ipynb  2022-04-29-Iterators.ipynb  2022-04-29-ODESolvers.ipynb  2022-05-02-Does the IEKS improve on the EKS?.ipynb  2022-05-02-IteratorGIF.ipynb  2022-05-06-new-structure-and-calibration.ipynb  2022-05-09-GIFv2.ipynb  2022-05-09-Large-Horizon-Dense-Steps.ipynb  2022-05-11-ResidualGIF.ipynb  2022-05-16-InitializeOK.ipynb
pof/: __init__.py  _solve.py  calibration.py  convenience.py  convergence_criteria.py  diffrax.py  initialization.py  iterators.py  ivp.py  main.py  observations.py  solve.py  solver.py  step.py  transitions.py  utils.py
scripts/: 2022-04-22-testjitted.py  2022-06-16-gif.py  2022-08-17-jit_dev.py  2022-08-19-lm_test.py  2022-08-24-solver_dev.py  2022-08-25-coarse_sol_dev.py  2022-08-25-long_horizon_test.py  2022-09-01-admm_dev.py  2022-09-01-better_gif.py  2022-10-05_step_size_comparison_gifs.py  2022-10-05_step_size_comparison_plots.py  2022-10-06_tmax_comparison.py  2022-10-13_jax_cuda_debug.py  2023-01-09-minimal_usage.py  2023-01-30-unscented_dev.py  helloworld.py
tests/: simple_linear_model.py  test_diffrax.py  test_filtsmooth.py  test_initialization.py  test_ivp.py  test_observations.py  test_solver.py  test_transtions.py
(+76 files in other folders)
