[tool.poetry]
name = "parallel-ode-filters"
version = "0.1.0"
description = ""
authors = ["Nathanael Bosch <nathanael.bosch@uni-tuebingen.de>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pof"}]

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.23.4"
scipy = "^1.9.2"
tqdm = "^4.64.1"
matplotlib = "^3.6.1"
jupyter = "^1.0.0"
pandas = "^1.5.0"
tueplots = "^0.0.5"
plac = "^1.3.5"
celluloid = "^0.2.0"
# jaxlib = {version = "^0.3.7+cuda11.cudnn82", source = "jax"}
# jax = {extras = ["cuda"], version = "^0.3.23"}
# the above is what I previously had but then tox didn't work.
# this has been fixed by using instead:
jaxlib = "^0.3.7"
jax = "^0.3.23"
# if gpu does not work, try `poetry install --with gpu`, or uncomment the ones from above
diffrax = "^0.2.1"
tornadox = "^0.0.1"

[tool.poetry.group.gpu]
optional = true

[tool.poetry.group.gpu.dependencies]
jaxlib = {version = "^0.3.7+cuda11.cudnn82", source = "jax"}
jax = {extras = ["cuda"], version = "^0.3.23"}


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.9.1"}
isort = "^5.12.0"
pytest = "^7.4.2"

[[tool.poetry.source]]
name = "jax"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
default = false
secondary = false


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | oldstuff
  | _build
  | buck-out
  | build
  | dist
)/
'''


[tool.isort]
profile = "black"
multi_line_output = "3"
include_trailing_comma = "true"
force_grid_wrap = "0"
use_parentheses = "true"
line_length = "88"